# MPI-MATRIX-MULTIPLICATOR

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMSMPI.cmake
data/: matrix_a_4x4.txt  matrix_b_4x4.txt
docs/performance/: windows_msmpi_random_1024.csv  windows_msmpi_random_4000.csv
include/: benchmark.hpp  distributed_multiplier.hpp  matrix.hpp  program_options.hpp
scripts/: build_vs2022.ps1  generate_matrix_files.ps1  run_benchmarks.ps1
src/: benchmark.cpp  distributed_multiplier.cpp  main.cpp  matrix.cpp  program_options.cpp
